KAFKA-651 Squashed MapR specific commits (from e764967 to 2ab2ad9) are copied from branch v5.1.2-mapr (https://github.com/mapr/private-schema-registry/tree/v5.1.2-mapr) to branch v6.0.0-mapr
