# core/generated/swagger-ui/schema-registry-api-spec.yaml
@@ -81,6 +81,7 @@ paths:
           \ to be tested"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "version"
         in: "path"
         description: "Version of the subject's schema against which compatibility\
@@ -95,6 +96,14 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/RegisterSchemaRequest"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -122,7 +131,15 @@ paths:
       - "application/vnd.schemaregistry.v1+json"
       - "application/vnd.schemaregistry+json; qs=0.9"
       - "application/json; qs=0.5"
-      parameters: []
+      parameters:
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -150,6 +167,14 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/ConfigUpdateRequest"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -179,10 +204,19 @@ paths:
         in: "path"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "defaultToGlobal"
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -211,12 +245,21 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - in: "body"
         name: "body"
         description: "Config Update Request"
         required: true
         schema:
           $ref: "#/definitions/ConfigUpdateRequest"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -348,6 +391,14 @@ paths:
         required: false
         type: "boolean"
         default: false
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -378,6 +429,14 @@ paths:
         required: true
         type: "integer"
         format: "int32"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -411,6 +470,14 @@ paths:
         required: true
         type: "integer"
         format: "int32"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -436,7 +503,15 @@ paths:
       - "application/vnd.schemaregistry.v1+json"
       - "application/vnd.schemaregistry+json; qs=0.9"
       - "application/json; qs=0.5"
-      parameters: []
+      parameters:
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -466,6 +541,14 @@ paths:
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -498,6 +581,7 @@ paths:
         description: "Subject under which the schema will be registered"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "deleted"
         in: "query"
         required: false
@@ -508,6 +592,14 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/RegisterSchemaRequest"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         404:
           description: "Error code 40401 -- Subject not found\nError code 40403 --\
@@ -537,10 +629,19 @@ paths:
         description: "the name of the subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "permanent"
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -573,10 +674,19 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "deleted"
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -622,12 +732,21 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - in: "body"
         name: "body"
         description: "Schema"
         required: true
         schema:
           $ref: "#/definitions/RegisterSchemaRequest"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -661,6 +780,7 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "version"
         in: "path"
         description: "Version of the schema to be returned. Valid values for versionId\
@@ -674,6 +794,14 @@ paths:
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -710,6 +838,7 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "version"
         in: "path"
         description: "Version of the schema to be returned. Valid values for versionId\
@@ -723,6 +852,14 @@ paths:
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
@@ -756,6 +893,7 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "version"
         in: "path"
         description: "Version of the schema to be returned. Valid values for versionId\
@@ -764,6 +902,14 @@ paths:
           \ be a new latest schema that gets registered right after this request is\
           \ served."
         required: true
+        type: "string"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
         type: "string"
       responses:
         200:
@@ -801,6 +947,7 @@ paths:
         description: "Name of the Subject"
         required: true
         type: "string"
+        pattern: ".+"
       - name: "version"
         in: "path"
         description: "Version of the schema to be returned. Valid values for versionId\
@@ -814,6 +961,14 @@ paths:
         in: "query"
         required: false
         type: "boolean"
+      - name: "Authorization"
+        in: "header"
+        required: false
+        type: "string"
+      - name: "Cookie"
+        in: "header"
+        required: false
+        type: "string"
       responses:
         200:
           description: "successful operation"
