# core/src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SubjectsResource.java
@@ -15,6 +15,9 @@
 
 package io.confluent.kafka.schemaregistry.rest.resources;
 
+import io.confluent.kafka.schemaregistry.filter.RequirePermission;
+import io.confluent.kafka.schemaregistry.filter.Permission;
+import io.confluent.rest.impersonation.ImpersonationUtils;
 import io.confluent.kafka.schemaregistry.exceptions.SubjectNotSoftDeletedException;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
@@ -37,6 +40,7 @@ import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
+import javax.ws.rs.HeaderParam;
 import javax.ws.rs.container.AsyncResponse;
 import javax.ws.rs.container.Suspended;
 import javax.ws.rs.core.Context;
@@ -71,7 +75,7 @@ public class SubjectsResource {
   }
 
   @POST
-  @Path("/{subject}")
+  @Path("/{subject: .+}")
   @ApiOperation(value = "Check if a schema has already been registered under the specified subject."
       + " If so, this returns the schema string along with its globally unique identifier, its "
       + "version under this subject and the subject name.")
@@ -81,13 +85,24 @@ public class SubjectsResource {
       @ApiResponse(code = 500, message = "Internal server error", response = Schema.class),
   })
   @PerformanceMetric("subjects.get-schema")
+  @RequirePermission(Permission.READ)
   public void lookUpSchemaUnderSubject(
       final @Suspended AsyncResponse asyncResponse,
       @ApiParam(value = "Subject under which the schema will be registered", required = true)
         @PathParam("subject") String subject,
       @QueryParam("deleted") boolean lookupDeletedSchema,
       @ApiParam(value = "Schema", required = true)
-      @NotNull RegisterSchemaRequest request) {
+      @NotNull RegisterSchemaRequest request,
+      @HeaderParam(HttpHeaders.AUTHORIZATION) String auth,
+      @HeaderParam(HttpHeaders.COOKIE) String cookie) {
+    ImpersonationUtils.runAsUserIfImpersonationEnabled(() -> {
+      lookUpSchemaUnderSubject(asyncResponse, subject, lookupDeletedSchema, request);
+      return null;
+    }, auth, cookie);
+  }
+
+  private void lookUpSchemaUnderSubject(AsyncResponse asyncResponse, String subject,
+      boolean lookupDeletedSchema, RegisterSchemaRequest request) {
     log.info("Schema lookup under subject {}, deleted {}, type {}",
              subject, lookupDeletedSchema, request.getSchemaType());
     // returns version if the schema exists. Otherwise returns 404
@@ -122,7 +137,16 @@ public class SubjectsResource {
   @ApiResponses(value = {
       @ApiResponse(code = 500, message = "Error code 50001 -- Error in the backend datastore")})
   @PerformanceMetric("subjects.list")
+  @RequirePermission(Permission.READ)
   public Set<String> list(
+          @QueryParam("deleted") boolean lookupDeletedSubjects,
+          @HeaderParam(HttpHeaders.AUTHORIZATION) String auth,
+          @HeaderParam(HttpHeaders.COOKIE) String cookie) {
+    return ImpersonationUtils.runAsUserIfImpersonationEnabled(
+      () -> list(lookupDeletedSubjects), auth, cookie);
+  }
+
+  private Set<String> list(
           @QueryParam("deleted") boolean lookupDeletedSubjects
   ) {
     try {
@@ -135,7 +159,7 @@ public class SubjectsResource {
   }
 
   @DELETE
-  @Path("/{subject}")
+  @Path("/{subject: .+}")
   @ApiOperation(value = "Deletes the specified subject and its associated compatibility level if "
       + "registered. It is recommended to use this API only when a topic needs to be recycled or "
       + "in development environment.", response = Integer.class, responseContainer = "List")
@@ -144,12 +168,25 @@ public class SubjectsResource {
       @ApiResponse(code = 500, message = "Error code 50001 -- Error in the backend datastore")
   })
   @PerformanceMetric("subjects.delete-subject")
+  @RequirePermission(Permission.MODIFY)
   public void deleteSubject(
-      final @Suspended AsyncResponse asyncResponse,
-      @Context HttpHeaders headers,
-      @ApiParam(value = "the name of the subject", required = true)
-      @PathParam("subject") String subject,
-      @QueryParam("permanent") boolean permanentDelete) {
+          final @Suspended AsyncResponse asyncResponse,
+          @Context HttpHeaders headers,
+          @ApiParam(value = "the name of the subject", required = true)
+          @PathParam("subject") String subject,
+          @QueryParam("permanent") boolean permanentDelete,
+          @HeaderParam(HttpHeaders.AUTHORIZATION) String auth,
+          @HeaderParam(HttpHeaders.COOKIE) String cookie) {
+    ImpersonationUtils.runAsUserIfImpersonationEnabled(() -> {
+      deleteSubject(asyncResponse, headers, subject, permanentDelete);
+      return null;
+    }, auth, cookie);
+  }
+
+  private void deleteSubject(AsyncResponse asyncResponse,
+                                     HttpHeaders headers,
+                                     String subject,
+                             boolean permanentDelete) {
     log.info("Deleting subject {}", subject);
     List<Integer> deletedVersions;
     try {
@@ -174,5 +211,4 @@ public class SubjectsResource {
     }
     asyncResponse.resume(deletedVersions);
   }
-
 }
